...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D6D6"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/weather_card"
        app:cardCornerRadius="30dp"
        android:layoutAnimation="@anim/layout_animation"
        android:layout_margin="15dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
...
                android:layout_height="250dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/weather_card"
        android:id="@+id/list_weather"
        android:layoutAnimation="@anim/layout_animation"
        android:layout_marginTop="25dp"
        app:reverseLayout="true"
        android:layout_marginStart="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
...
